<resources>
    <string name="app_name">Social Media</string>

    <string name="NetworkStatusTxt">Network Status</string>
    <string name="okTxt">OK</string>
    <string name="unable_to_process_your_request">An error has occurred, please try again</string>

    <!-- Alert Dialog -->
    <string name="no_internet_access">No Internet access, please check your network connection</string>

    <string name="friend_suggestion">Friend Suggestion</string>
    <string name="friend_request">Friend Request</string>
    <string name="request">Request</string>
    <string name="add_friend">Add Friend</string>
    <string name="friends">Friends List</string>

    <string name="media_not_valid">Media not valid</string>
    <string name="todo">ToDo</string>
    <string name="create_a_post">Create a Post</string>
    <string name="feed_upload_success">Feed uploaded Successfully</string>
    <string name="do_you_want_to_post_this_feed">Do you want to post this feed ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="description_for_the_post">Description for the post</string>
    <string name="remove">Remove</string>
    <string name="cancel_authorization">Cancel Authorization</string>
    <string name="sign_out">Sign Out</string>
    <string name="requested">Requested</string>
    <string name="accept">Accept</string>
    <string name="feed_delete_success">Feed Deleted Successfully</string>
    <string name="notification_delete_success">Notification Deleted Successfully</string>
    <string name="media_delete_success">Media Deleted Successfully</string>
    <string name="delete_feed">Do you want to delete this feed ?</string>


    <string name="settings">Settings</string>
    <string name="video_name">Video name: %s</string>
    <string name="video_width_and_height">Width x height: %1$d x %2$d</string>
    <string name="video_time">Total duration: %s</string>
    <string name="video_download_speed">Download speed: %d b/s</string>
    <string name="init_play_fail">Failed to start the player.</string>
    <string name="video_bitrate">Current bitrate: %d</string>
    <string name="video_bitrate_empty">Current bitrate: NA</string>
    <string name="video_bitrate_title">Bitrate switching</string>
    <string name="video_bitrate_auto">Smoothly change to specified bitrate</string>
    <string name="video_bitrate_designated">Immediately change to specified bitrate</string>
    <string name="video_stop_downloading">Download control</string>
    <string name="video_set_play_speed">Playback speed</string>
    <string name="video_set_bandwidth_mode">Bandwidth adaptation</string>
    <string name="video_switch_subtitle">Switch subtitle</string>
    <string name="setting_cancel">Cancel</string>
    <string name="setting_ok">OK</string>
    <string name="video_stop_download">Stop download</string>
    <string name="video_keep_download">Resume download</string>
    <string name="automatic_adaptation">Auto-adaptation</string>
    <string name="close_adaptive_bandwidth">Disable bandwidth adaptation</string>
    <string name="open_adaptive_bandwidth">Enable bandwidth adaptation</string>
    <string name="close_logo">Disable watermark</string>
    <string name="play_mode">Playback mode</string>
    <string name="play_audio">Audio</string>
    <string name="play_video">Video</string>
    <string name="video_set_loop_play">Repeat mode</string>
    <string name="video_loop_play">Enable repeat mode</string>
    <string name="video_not_loop_play">Disable repeat mode</string>
    <string name="video_mute_setting">Mute/Unmute</string>
    <string name="video_mute">Mute</string>
    <string name="video_not_mute">Unmute</string>
    <string name="video_set_volume">Volume</string>
    <string name="video_volume_range">0-1.0</string>
    <string name="super_definition">"Blu-ray (%dP)"</string>
    <string name="high_definition">"HD (%dP)"</string>
    <string name="standard_definition">"SD (%dP)"</string>
    <string name="fluency_definition">"Smooth (%dP)"</string>
    <string name="auto_definition">Auto</string>
    <string name="resolution_switching">Switching to <![CDATA[<font color="#FF7500">%s</font>]]>... Please wait.</string>
    <string name="switch_bitrate_enable">The bitrate cannot be changed.</string>
    <string name="resolution_switched_auto">Switched successfully.</string>
    <string name="video_add_single_cache_fail">Settings failed. Perform preload initialization first.</string>
    <string-array name="play_speed_text">
        <item>0.5x</item>
        <item>0.75x</item>
        <item>1.0x</item>
        <item>1.25x</item>
        <item>1.5x</item>
        <item>2.0x</item>
    </string-array>
    <string name="switch_audio_track">Switch Audio Track</string>
    <string name="gettings">Gettings</string>
    <string name="get_audio_track_info">Get audioTracks info</string>
    <string name="current_audio_track">Get current AudioTrack</string>
    <string name="audio_tracks">Get AudioTracks</string>

    <string name="set_wake_mode">Set wake mode</string>
    <string name="close_wake_mode">Close wake mode</string>

    <string name="_1_0x">1.0X</string>

    <!--Instream ad-->
    <string name="instream_skip_ad">Skip</string>
    <string name="instream_ad_id">testy3cglm3pj0</string>

    <string name="access_needed">Access Permission Needed</string>
    <string name="close">Close</string>
    <string name="please_wait">Please wait…  loading!</string>

    <!--Keys-->
    <string name="splash_id">testq6zq98hecj</string>
    <string name="ad_failed_load">Ad failed load</string>
    <string name="done">Done</string>
    <string name="select_location_manually">Long press anywhere on the map to select the location manually</string>
    <string name="friends_not_found">Friends not found</string>
    <string name="show_me">Show Me</string>
    <string name="enable_gps">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_granted">Permission Granted</string>

</resources>