<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="horizontal"
    android:layout_margin="5dp"
   >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

    <TextView
        android:gravity="center"
        android:id="@+id/txt_dia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/do_you_want_to_post_this_feed"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"/>

        <EditText
            android:id="@+id/edittext_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:gravity="top|start"
            android:hint="@string/description_for_the_post"
            android:lines="4"
            android:maxLength="150"
            android:padding="5dp"
            android:textColor="#2962FF"
            android:textColorHint="@color/colorPrimary"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck"
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/btn_yes_dialog"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:background="@color/colorPrimaryDark"
            android:ems="6"
            android:text="@string/yes"
            android:textColor="#D1C4E9" />

        <Button
            android:id="@+id/btn_no_dialog"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:background="@color/colorPrimaryDark"
            android:ems="6"
            android:text="@string/no"
            android:textColor="#D1C4E9" />
    </LinearLayout>

    </LinearLayout>

    <ImageView
        android:visibility="gone"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:layout_margin="20dp"
        android:id="@+id/image_feed_dialog"
        android:contentDescription="@string/todo" />

</LinearLayout>