<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/social_media_app_icon"
        android:backgroundTint="@color/colorPrimary"
        android:layout_margin="10dp"
        android:contentDescription="@string/todo" />

    <!-- Define an ID for the button control. -->
    <com.huawei.hms.support.hwid.ui.HuaweiIdAuthButton
        android:id="@+id/HuaweiIdAuthButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        app:hwid_color_policy="hwid_color_policy_blue"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:ems="12"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_margin="30dp"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_authrization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_authorization"
        android:ems="12"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_margin="30dp"
        android:visibility="gone"/>

</LinearLayout>