<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/profile_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/ic_baseline_people_24"
                android:backgroundTint="@color/colorPrimary"
                android:contentDescription="@string/todo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_name_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"
                android:layout_toEndOf="@id/profile_image"
                android:gravity="start"
                android:paddingStart="5dp"
                android:text="shdfiuhs"
                android:textColor="@color/white"
                android:textSize="16sp" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_friend_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryDark"
                android:ems="7"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/add_friend"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/remove_friend_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryDark"
                android:ems="7"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/remove"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>

